bug 441888 - ARIA checked menu items are not included in the total list of menu items, r=MarcoZ